# artifact-detection-engine

./: .gitignore  README.md  config.example.yaml  pyproject.toml  run_batch.py  run_engine.py
artifact_detection_engine/: cli.py  engine.py  reporter.py  scoring.py
artifact_detection_engine/analyzers/: base.py  clicks.py  clipping.py  dropouts.py  dynamics.py  loudness.py  noise.py  noise_bursts.py  spectral.py
artifact_detection_engine/models/: __init__.py  results.py
