[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artifact-detection-engine"
version = "0.1.0"
description = "Audio artifact detection and quality analysis engine"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Audio Analysis Team"}
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pyloudnorm>=0.1.0",
    "soundfile>=0.10.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[project.scripts]
artifact-detect = "artifact_detection_engine.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["artifact_detection_engine*"]
